EDMEBANK-43: JDK Bug fix